ingress-example/nsq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsq
  namespace: mini-nginx-ingress
  labels:
    app: nsq
    component: nsq-broker
spec:
  type: NodePort
  ports:
  - port: 4150
    name: tcp
    protocol: TCP
  - port: 4151
    name: http
    protocol: TCP
  selector:
    app: nsq
    component: nsq-broker
---
