ingress-example/backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-backend-ingress
  namespace: ingress-mini-nginx
  annotations:
    kubernetes.io/ingress.class: mini-ingress-nginx
spec:
  backend:
    serviceName: testsvc
    servicePort: 80
