ingress-example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: ingress-mini-nginx
  annotations:
    kubernetes.io/ingress.class: mini-ingress-nginx
spec:
  rules:
  - host: nsq.test.jd.com
    http:
      paths:
      - path: /nsq1
        backend:
          serviceName: nsq
          servicePort: 4151
      - path: /nsq2
        backend:
          serviceName: nsq
          servicePort: 4151
